Revision history for File::DataClass

0.7.343  2012-03-23
         - In F::DC::IO::close unlock and close handle before rename
           on MSWin32 and Cygwin. Creates a race condition on those platforms

0.7.339  2012-03-22
         - Altered F::DC:IO::close to work around rename of open files

0.7.338  2012-03-21
         - Tried reordering some use statements
         - Use binary mode for some IO tests on evil platform

0.7.336  2012-03-20
         - Turned CPAN testing on. Trying to diagnose Module::Build / Moose
           bug which results in 'has' not being defined during testing

0.7.335  2012-03-12
         - Stopped using Data::Section. It doesn't work with Plack/Starman
         - Updated Moose / Class::MOP / MRO::Compat dependencies

0.7.332  2012-02-24
         - Explicitley stopped Nigel Horne from testing my modules, see
           6f77a84e-5e4f-11e1-952b-9fe4e7658155

0.7.331  2012-02-23
         - Switched off CPAN testing again. Still a waste of bandwidth, see
           5a821344-5d86-11e1-92ee-8d2dc56bd05b

0.7.330  2012-02-22
         - Fixed Storage::XML::Bare for borked versions of XML::Bare > 0.45
           see RT#75220

0.7.328  2011-12-03
         - Fixed circular reference in result source registrations
         - Rationalised the exception_class attribute
         - Fixed circular reference in Cache on_set_error log

0.7.326  2011-12-02
         - Bumped File::Path version

0.7.325  2011-12-02
         - Updated inc::Bob, set create_readme_pod to true for README.pod file
         - Added missing IPC::Cmd dependency
         - Added default for localedir to F::DC::Schema::WithLanguage

0.7.321  2011-11-30
         - Works with CX::U 0.4.1084
         - Fixed new attribute assignment bug in HashMerge
         - Changed comment field types in Gettext::Storage::PO to scalars
         - Fixed bug in File::MailAlias BUILDARGS not using ioc_obj
         - Added Schema::WithLanguage
         - Storage::WithLanguage can dump