@@ -1,5 +1,7 @@
 Revision history for File::DataClass
 
+         - Updated inc::Bob. Added inc::CPANTesting
+
 0.7.343  2012-03-23
          - In F::DC::IO::close unlock and close handle before rename
            on MSWin32 and Cygwin. Creates a race condition on those platforms
